--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-request-context",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Set CLS context values form HTTP headers on each request",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@bitbucket.org/trigo/hapi-request-context.git"
+    "url": "https://bitbucket.org/trigo/hapi-request-context.git"
   },
   "keywords": [
     "hapi",
