--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "bluebird": "^2.9.30",
     "cls-bluebird": "^1.0.0",
-    "continuation-local-storage": "^3.1.4",
+    "cls-hooked": "^4.2.2",
     "hoek": "^2.14.0",
     "lodash": "^3.9.3"
   },
