--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "hapi": "^18.1.0",
+    "hapi": "^16.7.0",
     "mocha": "^6.1.3"
+  },
+  "peerDependencies": {
+    "hapi": "> ^16.7.0"
   }
 }
